deployments/apps/matrix/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: matrix-ingress
  namespace: matrix-chat
spec:
  entryPoints:
    - web
    - websecure
  routes:
  - match: Host(`chat.amy.mov`)
    kind: Rule
    services:
    - name: matrix-synapse
      port: 80
  - match: Host(`matrix.amy.mov`)
    kind: Rule
    services:
    - name: matrix-riot
      port: 80
  tls:
    secretName: cf-origin
